tests/neg/parser_type_alias_missing_target.baa
// EXPECT: متوقع نوع معروف بعد '=' في تعريف الاسم البديل

نوع اسم_ناقص = .

صحيح الرئيسية() {
    إرجع ٠.
}
